--- a/app/views/shared/_sidebar_left.html.erb
+++ b/app/views/shared/_sidebar_left.html.erb
@@ -1,4 +1,4 @@
-<h2 class="text-text-tertiary font-bold py-6 lg:w-10/12 m-auto">RAILSY POS</h2>
+<h2 class="text-text-tertiary font-bold py-6 lg:w-10/12 m-auto">FOX POS</h2>
 <div class="lg:w-10/12 m-auto">
   <div class="my-4 <%= active_class('home', '') %>">
     <%= render(ButtonComponent.new(
