Configure PWA and app launchers - Unix

--- a/app/views/home/menu.html.erb
+++ b/app/views/home/menu.html.erb
@@ -1,4 +1,5 @@
 <% content_for :body_class, "" %>
+<% content_for :title, "Menu" %>
 <%= turbo_stream_from 'categories' %>
 <%= turbo_stream_from 'products' %>
 <div class="sidebar-left bg-[#292C2D] w-2/12 h-full rounded-tr-3xl rounded-br-3xl py-6 justify-center">
