--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -2,7 +2,7 @@
 <div class="sidebar-left bg-[#292C2D] w-2/12 h-full rounded-tr-3xl rounded-br-3xl py-6 justify-center">
   <%= render('shared/sidebar_left') %>
 </div>
-<div class="main-section w-full h-screen py-4 px-4 block text-text-primary" data-controller="orders">
+<div class="main-section w-10/12 h-screen py-4 px-4 block text-text-primary" data-controller="orders">
   <div class="order-tabs w-full my-6 flex justify-between">
     <div class="tabs flex w-6/12 text-lg justify-between">
       <div data-order-progress="all active text-white flex" class="all">
