Configure Docker Development

--- a/app/views/shared/_sidebar_left.html.erb
+++ b/app/views/shared/_sidebar_left.html.erb
@@ -1,6 +1,6 @@
-<h2 class="text-text-tertiary font-bold py-6 lg:w-10/12 m-auto">FOX POS</h2>
+<h2 class="text-text-tertiary font-bold py-6 lg:w-10/12 m-auto text-3xl">FOX POS</h2>
 <div class="lg:w-10/12 m-auto">
-  <div class="my-4 <%= active_class('home', '') %>">
+  <div class="my-8 <%= active_class('home', '') %>">
     <%= render(ButtonComponent.new(
       text: 'Dashboard',
       classes: 'text-white hidden',
@@ -12,7 +12,7 @@
             ')
       ) %>
   </div>
-  <div class="my-4  <%= active_class('home', 'menu') %>">
+  <div class="my-8  <%= active_class('home', 'menu') %>">
     <%= render(ButtonComponent.new(
     text: 'Menu',
     classes: 'text-white',
@@ -35,7 +35,7 @@
         )
     ) %>
   </div>
-  <div class="my-4  <%= active_class('staff', 'index') %>">
+  <div class="my-8  <%= active_class('staff', 'index') %>">
     <%= render(ButtonComponent.new(
       text: 'Staff',
       classes: 'text-white hidden',
@@ -47,7 +47,7 @@
             ')
       ) %>
   </div>
-  <div class="my-4  <%= active_class('inventory', 'index') %>">
+  <div class="my-8  <%= active_class('inventory', 'index') %>">
     <%= render(ButtonComponent.new(
       text: 'Inventory',
       classes: 'text-white hidden',
@@ -62,7 +62,7 @@
             ')
       ) %>
   </div>
-  <div class="my-4  <%= active_class('reports', 'index') %>">
+  <div class="my-8  <%= active_class('reports', 'index') %>">
     <%= render(ButtonComponent.new(
       text: 'Reports',
       classes: 'text-white hidden',
@@ -76,7 +76,7 @@
             ')
       ) %>
   </div>
-  <div class="my-4  <%= active_class('orders', 'index') %>">
+  <div class="my-8  <%= active_class('orders', 'index') %>">
     <%= render(ButtonComponent.new(
       text: 'Orders                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               ',
       classes: 'text-white hi',
