Flush tailwind binaries

--- a/app/views/orders/_details.html.erb
+++ b/app/views/orders/_details.html.erb
@@ -16,7 +16,7 @@
       <div class="pb-4 border-t border-dashed border-bg-secondary">
         <p class="py-1 text-font-semibold flex w-full justify-between"> <span>Subtotal</span> <span><%= number_to_currency(order.subtotal, unit: 'Kes') %></span></p>
         <p class="py-2 text-font-semibold flex w-full justify-between"> <span>Tax</span> <span><%= number_to_currency(order.tax, unit: 'Kes') %></span></p>
-        <p class="my-2 pt-2 border-t border-dashed border-bg-secondary text-font-semibold flex w-full justify-between"> <span>Total</span> <span><%= number_to_currency(order.tax, unit: 'Kes') %></span></p>
+        <p class="my-2 pt-2 border-t border-dashed border-bg-secondary text-font-semibold flex w-full justify-between"> <span>Total</span> <span><%= number_to_currency(order.total, unit: 'Kes') %></span></p>
       </div>
       <%= progress_form(order) if order %>
     </div>
