--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -1,6 +1,6 @@
-@import 'tailwindcss';
-
-@config '../../../config/tailwind.config.js';
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 /*
 
