--- a/app/views/shared/_sidebar_left.html.erb
+++ b/app/views/shared/_sidebar_left.html.erb
@@ -1,5 +1,6 @@
+<div class="px-4 lg:px-0 ">
 <h2 class="text-text-tertiary font-bold py-6 lg:w-10/12 m-auto text-3xl">FOX POS</h2>
-<div class="lg:w-10/12 m-auto">
+<div class="w-full lg:w-11/12 m-auto">
   <div class="my-8 <%= active_class('home', '') %>">
     <%= render(ButtonComponent.new(
       text: 'Dashboard',
@@ -99,4 +100,6 @@
           ')
       ) %>
   </div>
+</div>
+
 </div>
