--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -48,8 +48,9 @@
       collection: Product.availabilities.keys.map { |k| [k.humanize, k] },
       label_html: { class: "text-white" },
       input_html: { class: "block w-full px-4 py-2 mt-2 border-0 rounded-lg shadow-sm" },
-      selected: form.object.availability || 'in_stock' %>
+      include_blank: false %>
   </div>
+
   <!-- Size and Stock -->
   <div class="my-8">
     <%= form.input :size, as: :select, label: "Size",
