--- a/app/views/products/_index.html.erb
+++ b/app/views/products/_index.html.erb
@@ -33,19 +33,19 @@
         <% if @products.any? %>
           <table class="min-w-full rounded-lg overflow-hidden text-white items-center">
             <thead class="py-4">
-              <tr>
-                <th class="px-4 py-2"><input type="checkbox"></th>
-                <th class="px-4 py-2">Product</th>
-                <th class="px-4 py-2">Name</th>
-                <th class="px-4 py-2">Item ID</th>
-                <th class="px-4 py-2">Stock</th>
+              <tr class="text-sm">
+                <!--<th class="px-4 py-2"><input type="checkbox"></th>-->
+                <th class="px-4 py-2 md:min-w-20">Product</th>
+                <th class="px-4 py-2 md:min-w-20">Name</th>
+                <th class="px-4 py-2 md:min-w-20 ">Item ID</th>
+                <th class="px-4 py-2 md:min-w-20">Stock</th>
                 <% unless @category.present? %>
-                  <th class="px-4 py-2">Category</th>
+                  <th class="px-4 py-2 md:min-w-20">Category</th>
                 <% end %>
-                <th class="px-4 py-2">Price</th>
-                <th class="px-4 py-2">Availability</th>
-                <th class="px-4 py-2">Edit</th>
-                <th class="px-4 py-2">Delete</th>
+                <th class="px-4 py-2 md:min-w-20">Price</th>
+                <th class="px-4 py-2 md:min-w-20">Availability</th>
+                <th class="px-4 py-2 md:min-w-20">Edit</th>
+                <th class="px-4 py-2 md:min-w-20">Delete</th>
               </tr>
             </thead>
             <tbody>
@@ -55,7 +55,7 @@
             </tbody>
           </table>
         <% else %>
-          <p class="text-center my-10 text-white">No products found.</p>
+          <p class="w-full text-center my-10 text-white">No products found.</p>
         <% end %>
       </div>
     </div>
