--- a/app/views/orders/edit.html.erb
+++ b/app/views/orders/edit.html.erb
@@ -2,20 +2,31 @@
 <%= turbo_stream_from 'order_items' %>
 <% content_for :body_class, "collapsed-sidebar" %>
 <div class="main-section w-full h-screen py-4 px-4 flex">
-  <div class="w-9/12 pr-4">
+  <div class="w-8/12 lg:w-9/12 pr-4 h-full items-between">
     <div class=" rounded-lg bg-[#565E60] p-4 pb-0">
       <div class="rounded-lg overflow-x-auto bg-[#565E60] p-2 pb-6 flex gap-4 custom-bar " id="categories">
-        <% Category.active_with_active_products.each do |category| %>
-          <%= render partial: 'orders/category', locals: { category: category, order: @order} %>
-        <% end %>
+       <% if @categories.any? %>
+          <%= render partial: 'orders/category', collection: @categories, locals: { order: @order} %>
+        <% else %>
+          <p class="w-full text-center text-white">You have no active categories with active products</p>
+       <% end %>
+
       </div>
     </div>
     <hr class="bg-white my-6">
-    <%= turbo_frame_tag 'order_options' do %>
-      <p class="w-full text-center text-white"> Select a category to add products to order</p>
+    <%= turbo_frame_tag "order_options" do %>
+      <% if @products.any? %>
+        <div class="w-full grid sm:grid-cols-2 md:grid-cols-4 xl:grid-cols-6 gap-4 h-[60vh] pb-[10vh] overflow-y-auto custom-bar">
+          <% @products.each do |product| %>
+            <%= render partial: "option", locals: { product: product, order: @order } %>
+          <% end %>
+          </div>
+      <% else %>
+          <p class=" my-10 text-white w-full text-center">Select a category to add products to order</p>
+      <% end %>
     <% end %>
   </div>
-  <div class=" bg-[#292C2D] w-3/12 h-full justify-center px-4 py-6 text-white rounded-lg oveflor-hidden">
+  <div class=" bg-[#292C2D] w-4/12 lg:3/12 h-full justify-center px-4 py-6 text-white rounded-lg oveflor-hidden">
     <div class="h-full">
       <%= turbo_frame_tag 'order_details' do %>
         <%= render partial: 'details', locals: { order: @order } %>
