--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -3,40 +3,41 @@
   <%= render('shared/sidebar_left') %>
 </div>
 <div class="main-section w-10/12 py-4 px-4 block text-text-primary h-screen" data-controller="orders">
-  <div class="order-tabs w-full px-2 py-6 my-6 flex justify-between">
-    <div class="tabs flex w-8/12 text-lg justify-between">
-      <div data-order-progress="all active text-white flex" class="all">
-        <%= render(ButtonComponent.new(
+  <div class="order-tabs w-full px-2 py-4 lg:py-6 my-6 block lg:flex justify-between items-center ">
+    <div class="tabs flex overflow-x-auto custom-bar w-full lg:w-9/12 text-base justify-center lg:justify-left items-center" data-controller="tabs">
+       <div class="w-full flex gap-2 items-center p-2 tabs-group" >
+         <%= render(ButtonComponent.new(
         text: 'Current',
         href: orders_path,
-        classes: 'bg-bg-tertiary px-4 py-2 hover:bg-bg-secondary max-w-32 text-gray-900 hover:text-white hover:bg-bg-ternary'
+        classes: 'bg-bg-primary text-text-primary hover:text-text-secondary hover:bg-bg-tertiary p-2 m-0 tab active'
         )
        ) %>
-      </div>
       <% Order.progresses.keys.each do |progress| %>
-        <div data-order-progress="<%= progress %>" class="<%= progress %>_orders text-white flex">
           <%= render(ButtonComponent.new(
           text: progress,
           href: orders_path(progress: progress),
           data: { turbo_frame: 'orders'},
-          classes: 'active:bg-bg-tertiary px-4 py-2 bg-bg-primary max-w-32 text-text-primary hover:text-text-secondary hover:bg-bg-tertiary'
+          classes: ' bg-bg-primary text-text-primary hover:text-text-secondary hover:bg-bg-tertiary p-2 m-0 tab'
           )
           ) %>
-        </div>
       <% end %>
+       </div>
     </div>
+    <div class="flex w-full lg:w-3/12 relative justify-center lg:mt-0 lg:justify-end items-center px-2 text-base p-4"
+    >
     <%= render(ButtonComponent.new(
-      text: 'Add New Order',
-      classes: 'bg-bg-tertiary px-4 py-2 hover:bg-bg-secondary max-w-60 text-gray-900 hover:text-white',
+      text: 'New Order',
+      classes: 'bg-bg-tertiary max-w-48 text-base px-2 py-2 hover:bg-bg-secondary text-gray-900 hover:text-white',
       href: new_order_path,
       data: { turbo: false}
       )
       ) %>
+    </div>
   </div>
-  <div class="text-text-primary h-auto sm:h-[85vh] pb-[5vh] pr-6 overflow-y-auto custom-bar">
+  <div class="text-text-primary h-auto sm:h-[85vh] pb-[10vh] pr-6 overflow-y-auto custom-bar">
     <%= turbo_frame_tag "orders" do %>
       <% if @orders.any? %>
-        <div class="row grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-3 2xl:grid-cols-4 gap-8 w-full">
+        <div class="row grid grid-cols-1 sm:grid-cols-2 xl:grid-cols-3 2xl:grid-cols-4 gap-8 w-full">
           <%= render @orders %>
         </div>
       <% else %>
@@ -45,4 +46,3 @@
     <% end %>
   </div>
 </div>
->
