--- a/app/views/shared/_sidebar_left.html.erb
+++ b/app/views/shared/_sidebar_left.html.erb
@@ -5,6 +5,7 @@
     <%= render(ButtonComponent.new(
       text: 'Dashboard',
       classes: 'text-white hidden',
+      data: {turbo_frame: "_top"},
       href: '/home',
       svg: '<svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
               <circle cx="14.8552" cy="14.8591" r="14.8591" fill="white"/>
@@ -17,6 +18,7 @@
     <%= render(ButtonComponent.new(
     text: 'Menu',
     classes: 'text-white',
+    data: {turbo_frame: "_top"},
     href: '/home/menu',
     svg: '<svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
           <circle cx="14.8591" cy="14.8591" r="14.8591" fill="white"/>
@@ -40,6 +42,7 @@
     <%= render(ButtonComponent.new(
       text: 'Staff',
       classes: 'text-white hidden',
+      data: {turbo_frame: "_top"},
       href: '/home/menu',
       svg: '<svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
               <circle cx="14.8591" cy="14.8591" r="14.8591" fill="white"/>
@@ -52,6 +55,7 @@
     <%= render(ButtonComponent.new(
       text: 'Inventory',
       classes: 'text-white hidden',
+      data: {turbo_frame: "_top"},
       href: '/home/menu',
       svg: '<svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
               <circle cx="14.8591" cy="14.8591" r="14.8591" fill="white"/>
@@ -67,6 +71,7 @@
     <%= render(ButtonComponent.new(
       text: 'Reports',
       classes: 'text-white hidden',
+      data: {turbo_frame: "_top"},
       href: '/home/menu',
       svg: '<svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
               <circle cx="14.8591" cy="14.8591" r="14.8591" fill="white"/>
@@ -81,6 +86,7 @@
     <%= render(ButtonComponent.new(
       text: 'Orders                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               ',
       classes: 'text-white hi',
+      data: {turbo_frame: "_top"},
       href: orders_path,
       svg: '<svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
             <circle cx="14.8591" cy="14.8591" r="14.8591" fill="white"/>
