--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -36,6 +36,7 @@
   <div class="inline">
     <%= render(ButtonComponent.new(
       text: 'Save',
+      type: 'submit',
       classes: 'bg-bg-tertiary px-4 py-4 hover:bg-bg-secondary max-w-32 text-gray-900 hover:text-white hover:bg-bg-ternary'
       )
       ) %>
