--- a/app/views/orders/edit.html.erb
+++ b/app/views/orders/edit.html.erb
@@ -16,6 +16,7 @@
     <hr class="bg-white my-6">
     <%= turbo_frame_tag "order_options" do %>
       <% if @products.any? %>
+        <h2 class="text-xl text-white my-6 ">Items in basket</h2>
         <div class="w-full grid sm:grid-cols-2 md:grid-cols-4 xl:grid-cols-6 gap-4 h-[60vh] pb-[10vh] overflow-y-auto custom-bar">
           <% @products.each do |product| %>
             <%= render partial: "option", locals: { product: product, order: @order } %>
