--- a/app/assets/stylesheets/item_thumbnail_component.css
+++ b/app/assets/stylesheets/item_thumbnail_component.css
@@ -65,3 +65,8 @@
   fill: #333333;
   transition-duration: 200;
 }
+
+.item-link .item-thumbnail.category-thumbnail.active svg path {
+  fill: #333333;
+  transition-duration: 200;
+}
