--- a/app/views/orders/_option.html.erb
+++ b/app/views/orders/_option.html.erb
@@ -1,11 +1,11 @@
 <!--# displays the products on order edit page below each category-->
-<%= turbo_frame_tag dom_id(product), class:"item-link flex" do %>
+<%= turbo_frame_tag dom_id(product), class:"item-link flex my-4" do %>
   <div class="item-thumbnail
   order-item-thumbnail
-  rounded-lg min-w-48 h-48 lg text-normal text-white duration-200 bg-bg-secondary">
-    <div class="thumbnail-content ">
+  rounded-lg min-w-48 h-48 text-normal text-white duration-200 bg-bg-secondary">
+    <div class="thumbnail-content p-3">
       <!-- Image in top-right corner -->
-      <div class="size bg-bg-tertiary px-2 text-space-900 absolute left-2 top-2 rounded-lg"> <%= product.size %> </div>
+      <div class="size bg-bg-tertiary px-2 text-space-900 absolute left-3 top-3 rounded-lg"> <%= product.size %> </div>
       <div class="image-container absolute">
         <% if product.image.attached? %>
           <img src="<%= product.thumbnail.url %>" alt="<%= product.name %>" loading="lazy" class="item-image">
