Configure password reset requests

--- a/app/views/shared/_sidebar_left.html.erb
+++ b/app/views/shared/_sidebar_left.html.erb
@@ -41,7 +41,7 @@
   <div class="my-8  <%= active_class('staff', 'index') %>">
     <%= render(ButtonComponent.new(
       text: 'Staff',
-      classes: 'text-white hidden duration-200',
+      classes: 'text-white duration-200',
       data: {turbo_frame: "_top"},
       href: '/home/menu',
       svg: '<svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
