--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,18 +1,38 @@
-<h2>Forgot your password?</h2>
 
-<%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= f.error_notification %>
 
-  <div class="form-inputs">
-    <%= f.input :email,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "email" } %>
+<% content_for :title, "Login" %>
+
+<div class="w-full h-screen text-text-primary py-6 pt-10 px-4 devise">
+  <h1 class="text-text-tertiary text-4xl font-bold h-auto w-full text-center pt-20 pb-6 ">FOXPOS</h1>
+  <div class="bg-bg-ternary rounded-3xl p-6 w-full md:w-[50%] lg:w-[40%] xl:w-[30%] mx-auto my-10">
+   <div class="text-center p-4">
+      <h2 class="text-text-tertiary text-2xl font-bold h-auto w-full text-center p-2 ">Forgot Your Password?</h2>
+     <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name)) do |form| %>
+      <div class="form-inputs text-left ">
+        <div class="my-8">
+          <%= form.input :email,
+            label_html: { class: "text-white" },
+            placeholder:"Enter your email",
+            required: true,
+            auto_focus: true,
+            input_html: { class: "block w-full px-4 py-2 mt-2 border-0 rounded-lg shadow-sm", autocomplete: "email" } %>
+        </div>
+      </div>
+
+
+      <div class="w-full pt-2">
+        <%= link_to "Back to Login", new_user_session_path, class:"text-underline text-text-tertiary"%>
+      </div>
+
+      <div class="form-actions flex justify-center pt-6">
+        <%= render(ButtonComponent.new(
+          text: 'Send Reset Instructions',
+          type: 'submit',
+          classes: 'bg-bg-tertiary px-4 py-2 hover:bg-bg-secondary max-w-[80%] text-gray-900 hover:text-white'
+          )
+        ) %>
+      </div>
+    <% end %>
+   </div>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
