--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,27 +1,50 @@
-<h2>Change your password</h2>
+<% content_for :title, "Login" %>
 
-<%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= f.error_notification %>
+<div class="w-full h-screen text-text-primary py-6 pt-10 px-4 devise">
+  <h1 class="text-text-tertiary text-4xl font-bold h-auto w-full text-center pt-20 pb-6 ">FOXPOS</h1>
+  <div class="bg-bg-ternary rounded-3xl p-6 w-full md:w-[50%] lg:w-[40%] xl:w-[30%] mx-auto my-10">
 
-  <%= f.input :reset_password_token, as: :hidden %>
-  <%= f.full_error :reset_password_token %>
+   <div class="text-center p-4">
+      <h2 class="text-text-tertiary text-2xl font-bold h-auto w-full text-center p-2 ">Change your password</h2>
+     <%= simple_form_for(resource, as: resource_name, url: session_path(resource_name)) do |form| %>
+      <div class="form-inputs text-left ">
+        <div class="my-8">
+          <%= form.input :password,
+            label_html: { class: "text-white" },
+            placeholder:"New password",
+            hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+            required: true,
+            auto_focus: true,
+            input_html: { class: "block w-full px-4 py-2 mt-2 border-0 rounded-lg shadow-sm", autocomplete: "new-password" } %>
+        </div>
+        <div class="my-8">
+          <%= form.input :password_confirmation,
+            label: "Confirm your new password",
+            label_html: { class: "text-white" },
+            placeholder:"New password",
+            required: true,
+            input_html: { class: "block w-full px-4 py-2 mt-2 border-0 rounded-lg shadow-sm", autocomplete: "new-password" }  %>
+        </div>
+      </div>
 
-  <div class="form-inputs">
-    <%= f.input :password,
-                label: "New password",
-                required: true,
-                autofocus: true,
-                hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                label: "Confirm your new password",
-                required: true,
-                input_html: { autocomplete: "new-password" } %>
+      <div class="form-actions flex justify-center pt-2 pb-4">
+        <%= render(ButtonComponent.new(
+          text: 'Login',
+          type: 'submit',
+          classes: 'bg-bg-tertiary px-4 py-2 hover:bg-bg-secondary max-w-40 text-gray-900 hover:text-white'
+          )
+        ) %>
+      </div>
+
+
+      <% unless user_signed_in? %>
+        <div class="w-full pt-6">
+          <%= link_to "Back to Login", new_user_session_path, class:"text-underline text-text-tertiary"%>
+        </div>
+      <% end %>
+
+    <% end %>
+   </div>
   </div>
+</div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Change my password" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
