--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -7,6 +7,8 @@
   <div class="bg-bg-ternary rounded-3xl p-6 w-full md:w-[50%] lg:w-[40%] xl:w-[30%] mx-auto my-10">
    <div class="text-center p-4">
       <h2 class="text-text-tertiary text-2xl font-bold h-auto w-full text-center p-2 ">Forgot Your Password?</h2>
+
+      <h4 class="my-4 ">Please enter your email to recover your password</h4>
      <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name)) do |form| %>
       <div class="form-inputs text-left ">
         <div class="my-8">
@@ -19,18 +21,17 @@
         </div>
       </div>
 
-
-      <div class="w-full pt-2">
-        <%= link_to "Back to Login", new_user_session_path, class:"text-underline text-text-tertiary"%>
-      </div>
-
-      <div class="form-actions flex justify-center pt-6">
+      <div class="form-actions flex justify-center pt-2 pb-4">
         <%= render(ButtonComponent.new(
-          text: 'Send Reset Instructions',
+          text: 'Submit',
           type: 'submit',
-          classes: 'bg-bg-tertiary px-4 py-2 hover:bg-bg-secondary max-w-[80%] text-gray-900 hover:text-white'
+          classes: 'bg-bg-tertiary px-4 py-2 hover:bg-bg-secondary max-w-[200px] text-gray-900 hover:text-white'
           )
         ) %>
+      </div>
+
+      <div class="w-full pt-6">
+        <%= link_to "Back to Login", new_user_session_path, class:"text-underline text-text-tertiary"%>
       </div>
     <% end %>
    </div>
